--- a/master.css
+++ b/master.css
@@ -47,7 +47,7 @@ ul{
 
 .navbar ul{
     overflow: hidden;
-    background-color: aliceblue;
+    background-color: rgba(138, 212, 185, 1);
     padding: 10px 0px;
     display: flex;
     align-items: center;
