--- a/landing.css
+++ b/landing.css
@@ -1,11 +1,26 @@
 #hero-container{
-    background-image: linear-gradient(to bottom, transparent, var(--white)), url("assets/hero-img.jpg");
+    background-image: linear-gradient(to bottom, transparent 50%, var(--white) 100%),linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/hero-img.jpg");
     background-size: cover;
-
     height: 80vh;
 }
 
 h1{
     font-size: 64px;
+}
+
+p{
+    font-size: 20px;
+}
+
+#hero-container{
+    display: flex;
+    justify-content: center;
+}
+
+#hero-title{
+    padding: 100px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items:  center;
     color: white;
 }
