--- a/master.css
+++ b/master.css
@@ -36,6 +36,12 @@ h1, h2, h3, p{
     font-style: normal;
 }
 
+.plus-jakarta-sans-regular {
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 .plus-jakarta-sans-bold {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-weight: 800;
