--- a/nuri/nuri.css
+++ b/nuri/nuri.css
@@ -1,75 +1,89 @@
-.page-header{
+.hover:hover{
+    background-color: #ddd;
+}
+
+.chatbot-content{
     display: flex;
-    overflow: hidden;
-    background-color: var(--darker-mint);
-    padding: 16px 24px;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+
+.nuri-sidebar{
+    background-color: var(--lavender);
+    display: flex;
+    flex-direction: column;
+    padding: 16px 16px;
     justify-content: space-between;
-    align-items: center;
-    
+    width: auto;
+    height: 800px;
 }
 
-.page-header a{
-    padding: auto;
-    font-family: var(--font-poppins-regular);
-    color: black;
-    text-decoration: none;
+#closed-sidebar{ 
+    width: 10%;
 }
 
-img{
-    width: 24px;
-    height: 24px;
-}
-
-.header-logo{
+.icon-container{
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    width: fit-content;
+    align-items: start;
+    gap: 16px;
+}
+
+#main-container{
+    width: fit-content;
+    flex-direction: row;
+}
+
+
+#main-ai-container{
+    flex-direction: row;
+}
+.qa-container{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+
+
+.action-icon{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.nuri-icons{
+    width: fit-content;
     padding: 8px 8px;
-    gap: 16px;
-    border-radius: 8px;
 }
 
-.header-logo:hover{
-    background-color: #ddd;
+.nuri-buttons{
+    background: none;
+    border: none;
+    padding: 0%;
 }
 
-.menu-link{
-    gap: 16px;
-}
-.menu-link a{
-    padding: 10px 10px;
-}
-
-.menu-link a:hover{
-    background-color: #ddd;
+.nuri-history{
+    background: none;
+    border: none;
+    padding: 0%;
 }
 
-.account-button{
+
+.chat-container{
     display: flex;
-    gap: 16px;
+    align-items: center;
+    width: 100%;
+    padding: 80px 200px;
 }
 
-.account-button a{
-    padding: 10px 10px;
-    border-radius: 8px;
+.nuri-chat{
+    background-color: red;
+    width: 100%;
+    text-align: center;
 }
-
-.account-button a:hover{
-    background-color: #ddd;
-}
-
-.account-button #login{
-    color: white;
-    background-color: var(--orange);
-    border-radius: 8px;
-}
-
-.account-button #login:hover{
-    color: white;
-    background: var(--orange-hover);
-}
-
-
-
-
 
 
