--- a/master.css
+++ b/master.css
@@ -7,6 +7,9 @@
     --background: rgba(255, 237, 222, 1);
     --darker-mint: #8AD4B9;
     --orange: #FF7F50;
+    --skyblue: #87CEEB;
+    --green: #85F042;
+    --rose: #F04299;
     --orange-hover: #FF9D79;
     --lavender: #E6E6FA;
     --white: rgb(255, 255, 255);
@@ -29,7 +32,8 @@ h1{
 p{
     font-family: var(--font-poppins-regular);
     font-weight: 300;
-    font-size: 12px;
+    font-size: 10px;
+    text-align: left;
 }
 
 .material-symbols-outlined {
