--- a/landing.css
+++ b/landing.css
@@ -27,7 +27,7 @@ p{
 }
 
 #hero-title{
-    padding: 100px 0px;
+    padding: 9vh 0px;
     display: flex;
     flex-direction: column;
     align-items:  center;
@@ -43,25 +43,25 @@ p{
 #how-card-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    row-gap: 96px;
-    column-gap: 32px;
-    padding: 128px 100px;
+    row-gap: 10vh;
+    column-gap: 2vw;
+    padding: 16vh 4vw;
 }
 
 .how-card{
     background-color: var(--dark-green);
     border-radius: 12px;
-    padding: 32px 32px;
-    padding-top: 96px;
+    padding: 2rem 2rem;
+    padding-top: 6rem;
     text-align: center;
     color: white;
-    width: 300px;
+    width: 16vw;
     position: relative;
 }
 
 .how-card-icon{
     background-color: var(--mint);
-    padding: 16px;
+    padding: 1rem;
     position: absolute;
     top: -20%;
     transform: translateX(-50%);
@@ -71,18 +71,23 @@ p{
 }
 
 .how-card-icon img {
-    width: 100px;
-    height: 100px;
+    width: 6rem;
+    height: 6rem;
+}
+
+.how-card h3{
+    text-align: center;
 }
 
 .how-card p{
-    margin-top: 20px;
-    margin-bottom: 12px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 #feature-title{
-    padding: 0px 10vw;
-    padding-bottom: 64px;
+    padding: 0vh 10vw;
+    padding-bottom: 6vh;
 }
 
 #features-benefits{
@@ -93,7 +98,7 @@ p{
 
 #features-container{
     flex: 0 0 50%;
-    padding: 64px 0px;
+    padding: 6vh 0px;
     color: var(--text-contrast);
 }
 
@@ -104,13 +109,13 @@ p{
 }
 
 .features{
-    margin: 8px 192px;
-    padding: 32px;
+    margin: 8px 11vw;
+    padding: 2rem;
     border-left: 2px solid black;
 }
 
 .features p{
-    margin-top: 24px;
+    margin-top: 1.5rem;
 }
 
 .selected{
