--- a/landing.css
+++ b/landing.css
@@ -42,7 +42,7 @@ p{
 
 #how-card-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(10vw, 1fr));
     row-gap: 10vh;
     column-gap: 2vw;
     padding: 16vh 4vw;
