--- a/registration/register.css
+++ b/registration/register.css
@@ -2,7 +2,7 @@ input{
     border: none;
     border-bottom: 2px solid var(--darker-mint);
     background-color: var(--white);
-    font-size: 1.5rem;
+    font-size: 1rem;
     width: 100%;
     padding: 1rem;
     box-sizing: border-box;
@@ -13,11 +13,16 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 h2{
     padding: 1.5rem;
+}
+
+a{
+    text-decoration: none;
+    color: var(--blue);
 }
 
 #form-wrapper{
@@ -29,8 +34,8 @@ h2{
 
 #form-container{
     background-color: var(--white);
-    width: 30vw;
-    height: 50vh;
+    width: 30rem;
+    padding-bottom: 3rem;
     border-radius: 7.5px;
     box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.2), 2px 2px 8px rgba(0, 0, 0, 0.05);
 }
@@ -41,9 +46,10 @@ h2{
 
 #form-button{
     width: 80%;
-    height: 4rem;
-    font-size: 1.5rem;
+    height: 3rem;
+    font-size: 1rem;
     margin: 1rem 0px;
+    margin-bottom: 0px;
     border: none;
     border-radius: 5px;
     background-color: var(--darker-mint);
@@ -53,4 +59,42 @@ h2{
 #form-button:hover{
     background-color: #3b5c50;
     color: var(--white);
+}
+
+#divider{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin: 1rem 0px;
+    box-sizing: border-box;
+}
+
+#divider span{
+    font-size: 1rem;
+}
+
+#divider::before, #divider::after {
+    content: '';
+    flex: 1;
+    border-bottom: 1px solid #000000;
+    margin: 1rem 3.5rem;
+}
+
+#sign-up-method{
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    gap: 8rem;
+}
+
+#have-account{
+    text-align: right;
+    padding: 1.5rem 3rem;
+    padding-bottom: 0px;
+}
+
+#checkbox, #remember{
+    padding: 0px;
+    margin: 0px;
 }
