semoga besok bisa kelar

--- a/master.css
+++ b/master.css
@@ -98,6 +98,7 @@ body {
     height: 100dvh; 
     margin: 0%;
     padding: 0%;
+    overflow-x: hidden;
     background-color: var(--background);
 }
 
