better food logging example + bottom padding container

--- a/home.css
+++ b/home.css
@@ -10,6 +10,7 @@
     background-color: #162B62;
     max-width: 1200px;
     margin: 40px auto;
+    padding-bottom: 30px;
     border-radius: 8px;
 }
 
