--- a/nutrition.css
+++ b/nutrition.css
@@ -1,3 +1,4 @@
+/* bagian kiri */
 .search-bar {
   margin-top: 25px;
   margin-left: 25px;
@@ -63,4 +64,132 @@ input[type="text"]::placeholder {
   font-size: 18px;
   font-weight: 500;
   color: #333;
+}
+
+/* bagian kanan */
+
+.main-container {
+  position: absolute;
+  width: 850px;
+  height: 450px;
+  left: 350px;
+  top: 100px;
+
+  background: #a8e6cf;
+}
+
+.food-header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.food-header img {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  flex-shrink: 0;
+  margin-left: 50px;
+  margin-top: 20px;
+}
+
+.food-texts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6px;
+  margin-top: 25px;
+}
+
+.food-category {
+  margin: 0;
+  font-size: 15px;
+  align-items: center;
+}
+
+.food-name {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.food-texts h2 {
+  font-size: 1rem;
+  margin: 0;
+  color: black;
+}
+
+.sub-container {
+  display: flex;
+  gap: 25px;
+}
+
+.nutrition-information {
+  background-color: rgb(64, 208, 167);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.nutrition-texts h2 {
+  display: grid;
+  color: black;
+  font-weight: 500;
+  margin-left: 10px;
+  margin-right: 100px;
+  margin: 20px;
+}
+
+.right-container {
+  margin-left: 10px;
+}
+
+.time {
+  background-color: rgb(64, 208, 167);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 500px;
+  height: 85px;
+  align-items: center;
+  justify-content: center;
+  font-size: 70px;
+}
+
+.serving-size {
+  background-color: rgb(64, 208, 167);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 500px;
+  height: 85px;
+  align-items: center;
+  justify-content: center;
+  font-size: 70px;
+}
+
+.note {
+  background-color: rgb(64, 208, 167);
+  margin-top: 20px;
+  margin-left: 50px;
+  margin-right: 75px;
+  border-radius: 10px;
+  height: 80px;
+}
+
+.note h5 {
+  margin-left: 10px;
+}
+
+.note-input textarea {
+  border-radius: 10px;
+  resize: none;
+  border-color: white;
+  width: 700px;
+  margin-left: 10px;
+  margin-top: 5px;
 }
