--- a/master.css
+++ b/master.css
@@ -18,6 +18,7 @@
     --mint: rgba(168, 230, 207, 1);
     --blue: rgba(113, 147, 211, 1);
     --font-poppins-regular: 'Poppins', sans-serif;
+    --button-hover: rgba(221, 221, 221, 0.7);
 }
 
 
