--- a/nutrition.css
+++ b/nutrition.css
@@ -1,7 +1,7 @@
 /* bagian kiri */
 .search-bar {
-  margin-top: 25px;
-  margin-left: 25px;
+  margin-top: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 form {
@@ -18,7 +18,7 @@ input[type="text"] {
   border: none;
   outline: none;
   background: transparent;
-  font-size: 16px;
+  font-size: 1rem;
   color: #333;
   width: 100%;
 }
@@ -150,13 +150,59 @@ input[type="text"]::placeholder {
   background-color: rgb(64, 208, 167);
   border-radius: 10px;
   display: flex;
-  flex-direction: column;
-  margin-top: 20px;
+  gap: 1rem;
+  margin-top: 1.5rem;
   width: 500px;
   height: 85px;
   align-items: center;
   justify-content: center;
-  font-size: 70px;
+  font-size: 3rem;
+}
+
+input[type="number"] {
+  width: 5rem;
+  font-size: 3.5rem;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid none;
+  color: black;
+  text-align: center;
+  border-radius: 0.3rem;
+  user-select: text;
+  caret-color: black;
+  transition: border-color 0.3s ease;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.separator {
+  flex-shrink: 0;
+  user-select: text;
+}
+
+.time-part {
+  cursor: default;
+  border-radius: 0.5rem;
+  padding: 0 0.5rem;
+  user-select: text;
+}
+
+#meridiem {
+  cursor: pointer;
+  border-radius: 10px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 0 0.5rem;
+}
+
+#meridiem:hover,
+#meridiem:focus {
+  background-color: rgb(195, 228, 207);
+  color: black;
+  outline: none;
 }
 
 .serving-size {
@@ -169,20 +215,27 @@ input[type="text"]::placeholder {
   height: 85px;
   align-items: center;
   justify-content: center;
-  font-size: 70px;
+  font-size: 2rem;
 }
 
 .note {
   background-color: rgb(64, 208, 167);
-  margin-top: 20px;
-  margin-left: 50px;
+  margin-top: 1rem;
+  margin-left: 6%;
   margin-right: 75px;
   border-radius: 10px;
-  height: 80px;
+  height: 100px;
 }
 
 .note h5 {
-  margin-left: 10px;
+  margin: 1rem;
+  padding-top: 1%;
+  margin-left: 1rem;
+}
+
+.note-input {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .note-input textarea {
@@ -190,6 +243,5 @@ input[type="text"]::placeholder {
   resize: none;
   border-color: white;
   width: 700px;
-  margin-left: 10px;
-  margin-top: 5px;
+  margin-left: 0.5rem;
 }
