--- a/sleeptime.css
+++ b/sleeptime.css
@@ -23,15 +23,81 @@
     position:relative;
     bottom: 16rem;
     margin: auto;
-    height: 5rem;
+    height: 6.5rem;
     width: 24rem;
     background-color: #1F3C85;
     border-radius: 4px;
 }
+
 #sleeptext
 {
     font-size: 1.2rem;
 }
+.range-slider {
+  height: 5px;
+  position: relative;
+  top: 5px;
+  background-color: #162B62;
+  border-radius: 2px;
+}
+.range-selected {
+  height: 100%;
+  left: 30%;
+  right: 30%;
+  position: absolute;
+  border-radius: 5px;
+  background-color: #1b53c0;
+}
+.range-input {
+  position: relative;
+}
+.range-input input {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+
+  right: 0px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.range-input input::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 3px solid #1b53c0;
+  background-color: #fff;
+  pointer-events: auto;
+  -webkit-appearance: none;
+}
+.range-input input::-moz-range-thumb {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  border: 3px solid #1b53c0;
+  background-color: #fff;
+  pointer-events: auto;
+  -moz-appearance: none;
+}
+.range-price {
+  margin: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.range-price label {
+  margin-right: 5px;
+}
+.range-price input {
+  width: 60px;
+  padding: 5px;
+}
+.range-price input:first-of-type {
+  margin-right: 15px;
+}
+
 .button{
     margin: auto;
     color: white;
@@ -41,7 +107,7 @@
     position: relative;
     height: 4.2rem;
     width: 24rem;
-    bottom:3rem;
+    bottom:4rem;
     color: white;
     background-color: #1F3C85;
     border-radius: 4px;
