--- a/nutrition.css
+++ b/nutrition.css
@@ -71,7 +71,7 @@ input[type="text"]::placeholder {
 .main-container {
   position: absolute;
   width: 850px;
-  height: 32rem;
+  height: 34rem;
   left: 350px;
   top: 100px;
 
@@ -82,11 +82,12 @@ input[type="text"]::placeholder {
   display: flex;
   align-items: center;
   gap: 15px;
+  font-family: poppins, sans-serif;
 }
 
 .food-header img {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
   flex-shrink: 0;
   margin-left: 50px;
@@ -99,11 +100,12 @@ input[type="text"]::placeholder {
   justify-content: center;
   gap: 6px;
   margin-top: 25px;
+  font-weight: bold;
 }
 
 .food-category {
   margin: 0;
-  font-size: 15px;
+  font-size: 1.3rem;
   align-items: center;
 }
 
@@ -131,6 +133,7 @@ input[type="text"]::placeholder {
   margin-left: 50px;
   margin-top: 20px;
   border-radius: 10px;
+  font-family: poppins, sans-serif;
 }
 
 .nutrition-texts h2 {
@@ -163,6 +166,7 @@ input[type="text"]::placeholder {
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  font-family: Poppins, sans-serif;
 }
 
 input[type="number"] {
@@ -222,6 +226,7 @@ input[type="number"]::-webkit-outer-spin-button {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
+  font-family: poppins, sans-serif;
 }
 
 .note {
@@ -231,6 +236,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-right: 75px;
   border-radius: 10px;
   height: 100px;
+  font-family: poppins, sans-serif;
 }
 
 .note h5 {
@@ -267,6 +273,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-right: 1rem;
   font-size: 2em;
   font-weight: 500;
+  font-family: poppins, sans-serif;
 }
 
 .confirm-button :hover {
