--- a/nutrition.css
+++ b/nutrition.css
@@ -2,16 +2,29 @@
 .search-bar {
   margin-top: 1.5rem;
   margin-left: 1.5rem;
+  display: flex;
+}
+
+#back-button {
+  margin-top: 3px;
+  display: inline-flex;
+  justify-content: center;
+  text-align: center;
+  width: 38px;
+  height: 38px;
+  background-color: #40d0a7;
+  border-radius: 10px;
 }
 
 form {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   background-color: white;
   border-radius: 25px;
   padding: 10px 15px;
-  width: 250px;
+  width: 200px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  margin-left: 0.6rem;
 }
 
 input[type="text"] {
@@ -86,8 +99,8 @@ input[type="text"]::placeholder {
 }
 
 .food-header img {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
   flex-shrink: 0;
   margin-left: 50px;
@@ -100,29 +113,32 @@ input[type="text"]::placeholder {
   justify-content: center;
   gap: 6px;
   margin-top: 25px;
-  font-weight: bold;
 }
 
 .food-category {
   margin: 0;
-  font-size: 1.3rem;
+  font-size: 25px;
   align-items: center;
+  font-weight: 500;
 }
 
 .food-name {
-  font-size: 1.3rem;
+  font-size: 20px;
   font-weight: bold;
+  font-weight: 500;
 }
 
 .food-texts h2 {
-  font-size: 1rem;
+  font-size: 20px;
   margin: 0;
   color: black;
+  font-weight: 500;
 }
 
 .sub-container {
   display: flex;
   gap: 25px;
+  font-size: 15px;
 }
 
 .nutrition-information {
@@ -165,13 +181,13 @@ input[type="text"]::placeholder {
   height: 85px;
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
+  font-size: 40px;
   font-family: Poppins, sans-serif;
 }
 
 input[type="number"] {
   width: 5rem;
-  font-size: 3.5rem;
+  font-size: 40px;
   background: transparent;
   border: none;
   border-bottom: 2px solid none;
@@ -225,15 +241,19 @@ input[type="number"]::-webkit-outer-spin-button {
   height: 85px;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 25px;
   font-family: poppins, sans-serif;
+}
+
+.serving-size-slider #value {
+  font-size: 23px;
 }
 
 .note {
   background-color: rgb(64, 208, 167);
   margin-top: 1rem;
   margin-left: 6%;
-  margin-right: 75px;
+  margin-right: 55px;
   border-radius: 10px;
   height: 100px;
   font-family: poppins, sans-serif;
@@ -256,6 +276,10 @@ input[type="number"]::-webkit-outer-spin-button {
   border-color: white;
   width: 700px;
   margin-left: 0.5rem;
+}
+
+#note::placeholder {
+  font-family: poppins, sans-serif;
 }
 
 .confirm-button {
