--- a/home.css
+++ b/home.css
@@ -120,7 +120,7 @@ span.material-symbols-outlined
 {
     width: 100%;
     height: 100%;
-    background-color: #265D3E;
+    background-color: #FFEDDE;
     border-radius: 10px;
     display: flex;
 }
@@ -135,7 +135,7 @@ span.material-symbols-outlined
     height: 100%;
     border-radius: 10px;
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 10px 0px 100px 20px;
 }
 
@@ -314,24 +314,31 @@ span#send
 {
     background-color: #72BA9F;
     border: none;
-    padding: 10px 50px;
+    padding: 10px 20px;
+    width: 30%;
     border-radius: 10px;
     display: flex;
-    align-self: center;
+    justify-content: center;
+    gap: 0.5rem;
 }
 
 .adjust-sleep-time p , .add-nutrition p
 {
     font-size: 14px;
     font-weight: 500;
-    color: #2F6E56;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
 .adjust-sleep-time .material-symbols-outlined , .add-nutrition .material-symbols-outlined
 {
     font-size: 18px;
     font-weight: 500;
-    color: #2F6E56;
+    color: #ffffff;
+    margin-left: 20px;
+
 }
 
 .adjust-sleep-time:hover, .add-nutrition:hover
@@ -341,12 +348,7 @@ span#send
 
 span.material-symbols-outlined#adjust, span.material-symbols-outlined#nutrition
 {
-    margin: 0px 10px 0px 0px;
-}
-
-.adjust-text, .add-nutrition-text
-{
-    margin: auto;
+    margin: 0px 0px 0px 0px;
 }
 
 /* Recommend  */
