--- a/landing.css
+++ b/landing.css
@@ -148,7 +148,7 @@ a{
     background-color: var(--blue);
     box-sizing: border-box;
     width: 100vw;
-    padding: 4rem 10rem;
+    padding: 4rem 5vw;
     padding-bottom: 6rem;
 }
 
