--- a/settings/settingstyle.css
+++ b/settings/settingstyle.css
@@ -96,7 +96,14 @@ p{
 .UserProfile{
     position:absolute;
     top:50px;
-    left:5%
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.UserProfile h1{
+    font-size: 2rem;
 }
 
 #email{
